refactor: 优化项目结构 拆分protobuf文件
