# cmd/food-server/wire_gen.go
@@ -28,9 +28,11 @@ func wireApp(config *conf.Config, logger log.Logger) (*kratos.App, func(), error
 	}
 	userRepo := data.NewUserRepo(dataData, logger)
 	userUsecase := biz.NewUserUsecase(config, userRepo, logger)
+	userService := service.NewUserService(userUsecase, logger)
 	collectionShopRepo := data.NewCollectionShopRepo(dataData, logger)
 	collectionShopUsecase := biz.NewCollectionShopUsecase(config, collectionShopRepo, logger)
-	foodService := service.NewFoodService(userUsecase, collectionShopUsecase, logger)
+	shopService := service.NewShopService(collectionShopUsecase, logger)
+	foodService := service.NewFoodService(userService, shopService)
 	grpcServer := server.NewGRPCServer(config, foodService, logger)
 	httpServer := server.NewHTTPServer(config, foodService, logger)
 	app := newApp(logger, grpcServer, httpServer)
